swagger documentation skeleton
